<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Port Authority</string>
    <string name="action_settings">Settings</string>
    <string name="macAddress">MAC</string>
    <string name="macVendor">Vendor</string>
    <string name="internalIpLabel">LAN IP</string>
    <string name="externalIpLabel">WAN IP</string>
    <string name="fetching">Fetching…</string>
    <string name="signalLabel">Signal/Speed</string>
    <string name="hostDiscovery">Discover Hosts</string>
    <string name="ssid">SSID</string>
    <string name="bssid">BSSID</string>
    <string name="scanWellKnownPorts">Scan Well-Known Ports</string>
    <string name="scanPortRange">Scan Port Range</string>
    <string name="resetPortRange">Reset Port Range</string>
    <string name="openPorts">Open Ports</string>
    <string name="portRangeStart">Start Port</string>
    <string name="portRangeStop">Stop Port</string>
    <string name="wifiDisabled">WiFi not enabled</string>
    <string name="noWifiConnection">No WiFi connection</string>
    <string name="wanHostHint">URL/IP</string>
    <string name="scanningWarning">WARNING</string>
    <string name="domainName">Domain Name</string>
    <string name="dnsLookup">DNS Lookup</string>
    <string name="wakeOnLan">Wake Up</string>
    <string name="waking">Waking up %1$s…</string>
    <string name="ipAddress">IP Address</string>
    <string name="startingDnsLookup">Fetching DNS records…</string>
    <string name="dnsInputError">Enter a domain and select a record type</string>
    <string name="notConnectedLan">You\'re not connected to the local network</string>
    <string name="notConnectedWifi">You\'re not connected to a WiFi network!</string>
    <string name="signalLink">%1$ddBm/%2$dMbps</string>
    <string name="hostScan">Scanning For Hosts</string>
    <string name="subnetHosts">%1$d hosts in your subnet</string>
    <string name="sort">Sort</string>
    <string name="sortIp">By IP</string>
    <string name="sortHostname">By hostname</string>
    <string name="sortVendor">By vendor</string>
    <string name="copyHostname">Copy hostname</string>
    <string name="copyIp">Copy IP</string>
    <string name="copyMac">Copy MAC</string>
    <string name="getMacVendorFailed">Failed to get MAC vendor</string>
    <string name="failedOpenDb">Failed to open database</string>
    <string name="downloadingData">Downloading Data</string>
    <string name="failedSubnetHosts">Failed to get the number of hosts in subnet</string>
    <string name="failedSignal">Failed to get signal strength</string>
    <string name="failedLinkSpeed">Failed to get link speed</string>
    <string name="failedSsid">Failed to get SSID</string>
    <string name="failedBssid">Failed to get BSSID</string>
    <string name="failedWifiManager">Failed to get WifiManager for this device</string>
    <string name="noWifiInterface">No WiFi interface found</string>
    <string name="scanningDisclaimer">
        Please be aware that running port scans against public servers is normally considered malicious.
        Additionally, running these kinds of scans over your carrier\'s network instead of your own WiFi connection will be slower and will sometimes produce inaccurate results due to traffic shaping.
        Your carrier can also consider traffic generated by this scan to be malicious.
    </string>
    <string name="ssidAccessTitle">Android %1$s SSID Access</string>
    <string name="ssidCoarseMsg">Android %1$s requires coarse location permissions to read the SSID. If this is not something you\'re comfortable with just deny the request and go without the functionality.</string>
    <string name="ssidFineMsg">Android %1$s requires fine location permissions to read the SSID. If this is not something you\'re comfortable with just deny the request and go without the functionality.</string>
    <string name="ouiDbTitle">Generate OUI Database</string>
    <string name="ouiDbMsg">Do you want to create the OUI database? This will download the official OUI list from Wireshark. Note that you won\'t be able to resolve any MAC vendors without this data. You can always perform this from the menu later.</string>
    <string name="portDbTitle">Generate Port Database</string>
    <string name="portDbMsg">"Do you want to create the port database? This will download the official port list from IANA. Note that you won't be able to identify services without this data. You can always perform this from the menu later.</string>
    <string name="failedDbInsert">Failed to insert data into the database. Please run this operation again</string>
    <string name="unsuppRecType">Record type %1$s not supported</string>
    <string name="lookupErr">Error performing lookup on type %1$s: %2$s</string>
    <string name="lookupTypeFail">Lookup of type %1$s failed with response code %2$s</string>
    <string name="noRecords">No records found for type %1$s</string>
    <string name="errAccessArp">Unable to access ARP entries</string>
    <string name="errParseArp">Unable to parse ARP entries</string>
    <string name="errFindArp">Unable to find ARP table</string>
    <string name="errReadArp">Unable to read ARP table</string>
    <string name="errExternIp">Couldn\'t get your external IP</string>
    <string name="nonPrivilegedMacAccess">Unavailable for non-privileged apps starting with Android 11</string>
</resources>