<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/DialogTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:padding="6dp">

        <EditText
            android:id="@+id/wolIp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/ipAddress"
            android:paddingBottom="5dp"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="6dp">

        <EditText
            android:id="@+id/wolMac"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/macAddress"
            android:paddingBottom="5dp"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/wolWake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button"
        android:text="@string/wakeOnLan"
        android:textColor="@drawable/button_text" />
</LinearLayout>
