<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLeftDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="@dimen/activity_default_margin">

        <ImageView
            android:id="@+id/mainLeftDrawerIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_white" />

        <TextView
            android:id="@+id/programTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/deviceInfoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/programTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/deviceInfoLabel"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/icsblue" />

        <TextView
            android:id="@+id/deviceMacAddressLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/deviceInfoLabel"
            android:layout_toLeftOf="@+id/deviceMacAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/macAddress"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/deviceMacAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/deviceInfoLabel"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/icsblue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/deviceMacAddressLabel"
            android:background="@color/icsblue" />

        <TextView
            android:id="@+id/internalIpAddressLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/deviceMacAddressLabel"
            android:layout_toLeftOf="@+id/internalIpAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/internalIpLabel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/internalIpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/deviceMacAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/icsblue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/internalIpAddress"
            android:background="@color/icsblue" />

        <TextView
            android:id="@+id/externalIpAddressLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/internalIpAddressLabel"
            android:layout_toLeftOf="@+id/externalIpAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/externalIpLabel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/externalIpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/internalIpAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/fetching"
            android:textColor="@color/icsblue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/externalIpAddress"
            android:background="@color/icsblue" />

        <TextView
            android:id="@+id/signalStrengthLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/externalIpAddressLabel"
            android:layout_toLeftOf="@+id/signalStrength"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/signalLabel"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/signalStrength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/externalIpAddress"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/icsblue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/signalStrength"
            android:background="@color/icsblue" />

        <TextView
            android:id="@+id/ssidLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/signalStrengthLabel"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/ssid"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/signalStrength"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/icsblue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/ssid"
            android:background="@color/icsblue" />

        <TextView
            android:id="@+id/bssidLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/ssidLabel"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/bssid"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ssid"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textColor="@color/icsblue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/bssid"
            android:background="@color/icsblue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/bssidLabel"
            android:orientation="vertical">

            <ListView
                android:id="@+id/hostList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:cacheColorHint="@color/black" />

            <Button
                android:id="@+id/discoverHosts"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:text="@string/hostDiscovery"
                android:textColor="@drawable/button_text"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/mainLeftDrawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@color/icsblue"
        android:dividerHeight="1dp" />
</android.support.v4.widget.DrawerLayout>
