<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/activity_default_margin"
    tools:context=".activity.LanHostActivity">

    <TextView
        android:id="@+id/hostName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:paddingBottom="5dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/icsblue" />

    <TextView
        android:id="@+id/hostMacLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/hostName"
        android:layout_toLeftOf="@+id/hostMac"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/macAddress"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/hostMac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/hostName"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/icsblue"
        android:textIsSelectable="true" />

    <View
        android:id="@+id/macAddressSeparator"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/hostMac"
        android:background="@color/icsblue" />

    <TextView
        android:id="@+id/hostMacVendorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/macAddressSeparator"
        android:layout_toLeftOf="@+id/hostMacVendor"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/macVendor"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/hostMacVendor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/macAddressSeparator"
        android:gravity="end"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/icsblue"
        android:textIsSelectable="true" />

    <View
        android:id="@+id/macVendorSeparator"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/hostMacVendor"
        android:background="@color/icsblue" />

    <TextView
        android:id="@+id/ipAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/macVendorSeparator"
        android:layout_toLeftOf="@+id/ipAddress"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/ipAddress"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/ipAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/macVendorSeparator"
        android:gravity="end"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textColor="@color/icsblue"
        android:textIsSelectable="true" />

    <View
        android:id="@+id/ipAddressSeparator"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/ipAddress"
        android:background="@color/icsblue" />

    <TextView
        android:id="@+id/portListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ipAddress"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/openPorts"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/icsblue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/portListLabel"
        android:orientation="vertical">

        <ListView
            android:id="@+id/portList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cacheColorHint="@color/black"
            android:scrollbarThumbVertical="@drawable/scrollbar" />

        <LinearLayout
            style="?attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/scanWellKnownPorts"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:text="@string/scanWellKnownPorts"
                android:textColor="@drawable/button_text"
                android:textSize="12sp" />

            <Button
                android:id="@+id/scanPortRange"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:text="@string/scanPortRange"
                android:textColor="@drawable/button_text"
                android:textSize="12sp" />

            <Button
                android:id="@+id/wakeOnLan"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:minHeight="1dp"
                android:minWidth="1dp"
                android:text="@string/wakeOnLan"
                android:textColor="@drawable/button_text"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
